--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   freezed_annotation: ^2.2.0
   json_annotation: ^4.7.0
   dio: ^4.0.6
+  flutter_svg: ^1.1.6
 
 dev_dependencies:
   flutter_test:
