--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   json_annotation: ^4.7.0
   dio: ^4.0.6
   flutter_svg: ^1.1.6
+  flutter_riverpod: ^2.1.1
 
 dev_dependencies:
   flutter_test:
